--- a/package.json
+++ b/package.json
@@ -10,16 +10,40 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.19"
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-vector-icons/common": "^12.0.0",
+    "@react-native-vector-icons/feather": "^12.0.0",
+    "@react-native-vector-icons/fontawesome6": "^12.0.0",
+    "@react-native/assets-registry": "^0.79.2",
+    "@react-navigation/native": "6.x",
+    "@react-navigation/native-stack": "6.x",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "axios": "^1.9.0",
+    "native-base": "^3.4.28",
+    "react": "18.3.1",
+    "react-hook-form": "^7.56.3",
+    "react-native": "0.71.19",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "3.18.2",
+    "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "reactotron-react-native": "^5.1.13",
+    "styled-components": "^6.1.18",
+    "styled-system": "^5.1.5",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react": "^16.3.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.17",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
@@ -27,10 +51,10 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.10",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
+    "react-test-renderer": "18.3.1",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "4.8.4",
+    "ws": "^8.18.2"
   }
 }
